# pi-audio

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  HARDWARE.md  README.md  capture.sh  deploy.sh  pi-audio.desktop  pyproject.toml
docs/hardware-configs/: rpi5-hosyond-millso.md
src/pi_audio/: __main__.py  audio.py  config.py  main.py  pitch.py  settings.py  spectrogram.py
src/pi_audio/screens/: base.py  meter.py  settings.py
tests/: test_pitch.py
