[project]
name = "pi-audio"
version = "0.1.0"
description = "Sound level display for Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.5",
    "numpy>=1.26",
    "scipy>=1.12",
    "pygame>=2.5",
]

[project.scripts]
pi-audio = "pi_audio.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_audio"]

[dependency-groups]
dev = ["ruff", "pytest"]
